; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_msc.c_codeview_add_type_array.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_msc.c_codeview_add_type_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symt = type { i32 }
%struct.codeview_type_parse = type { i32 }
%struct.TYPE_2__ = type { %struct.symt }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.symt* (%struct.codeview_type_parse*, i8*, i32, i32, i32)* @codeview_add_type_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.symt* @codeview_add_type_array(%struct.codeview_type_parse* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.codeview_type_parse*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.symt*, align 8
  %12 = alloca %struct.symt*, align 8
  store %struct.codeview_type_parse* %0, %struct.codeview_type_parse** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.codeview_type_parse*, %struct.codeview_type_parse** %6, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* @FALSE, align 4
  %16 = call %struct.symt* @codeview_fetch_type(%struct.codeview_type_parse* %13, i32 %14, i32 %15)
  store %struct.symt* %16, %struct.symt** %11, align 8
  %17 = load %struct.codeview_type_parse*, %struct.codeview_type_parse** %6, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* @FALSE, align 4
  %20 = call %struct.symt* @codeview_fetch_type(%struct.codeview_type_parse* %17, i32 %18, i32 %19)
  store %struct.symt* %20, %struct.symt** %12, align 8
  %21 = load %struct.codeview_type_parse*, %struct.codeview_type_parse** %6, align 8
  %22 = getelementptr inbounds %struct.codeview_type_parse, %struct.codeview_type_parse* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %10, align 4
  %25 = sub i32 0, %24
  %26 = load %struct.symt*, %struct.symt** %11, align 8
  %27 = load %struct.symt*, %struct.symt** %12, align 8
  %28 = call %struct.TYPE_2__* @symt_new_array(i32 %23, i32 0, i32 %25, %struct.symt* %26, %struct.symt* %27)
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  ret %struct.symt* %29
}

declare dso_local %struct.symt* @codeview_fetch_type(%struct.codeview_type_parse*, i32, i32) #1

declare dso_local %struct.TYPE_2__* @symt_new_array(i32, i32, i32, %struct.symt*, %struct.symt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
